[gd_scene load_steps=15 format=2]

[ext_resource path="res://Elements/Mob/Mob.gd" type="Script" id=1]
[ext_resource path="res://Elements/Mob/mob.svg" type="Texture" id=2]
[ext_resource path="res://Elements/Mob/light.png" type="Texture" id=3]
[ext_resource path="res://Elements/Mob/VisibilityArea/VisibilityArea.tscn" type="PackedScene" id=4]
[ext_resource path="res://Elements/Mob/States.gd" type="Script" id=5]
[ext_resource path="res://Elements/Mob/Idle.gd" type="Script" id=6]
[ext_resource path="res://Elements/Mob/AwayFromPlayer.gd" type="Script" id=7]
[ext_resource path="res://Elements/Mob/AtShootingDistance.gd" type="Script" id=8]

[sub_resource type="PhysicsMaterial" id=1]
friction = 5.0
bounce = 1.0

[sub_resource type="CircleShape2D" id=2]
radius = 23.885

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 20.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity_random = 0.17
angular_velocity = 250.68
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.9
angle = 347.6
angle_random = 1.0
scale = 0.5

[sub_resource type="Curve" id=4]
max_value = 1024.0
_data = [ Vector2( 0, 284.467 ), 0.0, 0.0, 0, 0, Vector2( 0.192531, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 2
emission_box_extents = Vector3( 15, 15, 1 )
flag_disable_z = true
spread = 45.5
gravity = Vector3( 0, 0, 0 )
angular_velocity = -0.980785
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel_random = 0.57
radial_accel_curve = SubResource( 5 )
damping = 21.39
angle = 360.0
angle_random = 1.0
scale = 0.6
color = Color( 1, 0, 0, 1 )

[node name="Mob" type="RigidBody2D"]
collision_layer = 4
collision_mask = 31
mass = 0.19898
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
linear_damp = 1.0
angular_damp = 1.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -6, 0 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 7.51035, 0.75103 )
scale = Vector2( 0.507495, 0.478979 )
texture = ExtResource( 3 )
color = Color( 0.894118, 0.317647, 0.317647, 1 )
energy = 1.2
shadow_enabled = true

[node name="Particles2D" type="Particles2D" parent="."]
use_parent_material = true
scale = Vector2( 2.48, 1 )
emitting = false
local_coords = false
process_material = SubResource( 3 )
texture = ExtResource( 2 )

[node name="Visibility" parent="." instance=ExtResource( 4 )]
visible = false
debug_color = Color( 0.905882, 1, 0.0627451, 0.0509804 )

[node name="ShootingArea" parent="." instance=ExtResource( 4 )]
visible = false
debug_color = Color( 0.909804, 0.247059, 0.247059, 0.0509804 )

[node name="DestroyParticles" type="Particles2D" parent="."]
show_behind_parent = true
emitting = false
amount = 15
lifetime = 6.0
one_shot = true
speed_scale = 8.32
explosiveness = 0.85
local_coords = false
process_material = SubResource( 6 )
texture = ExtResource( 2 )

[node name="DespawnTimer" type="Timer" parent="."]
one_shot = true

[node name="States" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Idle" type="Node" parent="States"]
script = ExtResource( 6 )

[node name="MovingToPlayer" type="Node" parent="States"]
script = ExtResource( 7 )

[node name="Shooting" type="Node" parent="States"]
script = ExtResource( 8 )

[node name="ShootingTimer" type="Timer" parent="States/Shooting"]
wait_time = 2.0

[connection signal="in_area" from="Visibility" to="." method="_on_Visibility_in_area"]
[connection signal="out_of_area" from="Visibility" to="." method="_on_Visibility_out_of_area"]
[connection signal="in_area" from="ShootingArea" to="." method="_on_ShootingArea_in_area"]
[connection signal="out_of_area" from="ShootingArea" to="." method="_on_ShootingArea_out_of_area"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
[connection signal="timeout" from="States/Shooting/ShootingTimer" to="States/Shooting" method="_on_ShootingTimer_timeout"]
